--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>Golden Plate</h3>
+          <h3>spice & stay</h3>
           <p>
             Experience the finest dining with our carefully crafted dishes and
             exceptional service.
